make beautiful logger compatible with Java 8